Work on first implementation movement

--- a/00_SOFTWARE/settings/settings.json
+++ b/00_SOFTWARE/settings/settings.json
@@ -19,8 +19,12 @@
         "show_grid" : true,
         "show_axes" : true
     },
-    "Punta": {
+    "Punta" : {
         "Name" : "Punta",
-        "Radius" : 0.2
+        "Radius" : 0.2,
+        "Height" : 3
+    },
+    "General" : {
+        "Quality" : 0.1
     }
 }
